--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   dio: ^5.7.0
+  insta_image_viewer: ^1.0.4
+  #  image_downloader: ^0.31.0
+  fl_downloader: ^2.0.2
 
 dev_dependencies:
   flutter_test:
